Fixed the multiple photo uploader

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
-<h1>CMS Boilerplate</h1>
-<p>Change me to a landing splash or reroute me to the <%= link_to "Projects", projects_path %> index</p>
+<div class="background">
+  <h1>CMS Boilerplate</h1>
+  <p>Change me to a landing splash or reroute me to the <%= link_to "Projects", projects_path %> index</p>
+</div>
 
 <%= javascript_pack_tag 'hd_react' %>
 
